--- a/mainapp/templates/mainapp/includes/inc_header.html
+++ b/mainapp/templates/mainapp/includes/inc_header.html
@@ -3,39 +3,47 @@
 
 <a class="logo" href="/"><img src="{% static 'img/logo.svg' %}" alt="logo"></a>
 <ul class="menu">
-    <li><a href="{% url 'main' %}"
-           class="menu-link {% if request.resolver_match.url_name == 'main' %}menu-link-active{% endif %}">HOME</a></li>
-    <li><a href="{% url 'products:index' %}"
-           class="menu-link {% if request.resolver_match.namespace == 'products' %}menu-link-active{% endif %}">PRODUCTS</a></li>
+    <li><a href="{% url 'main:index' %}"
+           class="menu-link {% if request.resolver_match.url_name == 'index' %}menu-link-active{% endif %}">HOME</a></li>
+    <li><a href="{% url 'main:products' %}"
+           class="menu-link {% if request.resolver_match.url_name in 'products, catalog, category, page' %}menu-link-active{% endif %}">PRODUCTS</a></li>
     <li><a href="#"
            class="menu-link {% if request.resolver_match.url_name == '#' %}menu-link-active{% endif %}">HISTORY</a></li>
-    <li><a href="{% url 'showroom' %}"
-           class="menu-link {% if request.resolver_match.url_name == 'showroom' or request.resolver_match.url_name == 'product-details' %}menu-link-active{% endif %}">SHOWROOM</a></li>
-    <li><a href="{% url 'contacts' %}"
+    <li><a href="{% url 'main:showroom' %}"
+           class="menu-link {% if request.resolver_match.url_name in 'showroom, product-details' %}menu-link-active{% endif %}">SHOWROOM</a></li>
+    <li><a href="{% url 'main:contacts' %}"
            class="menu-link {% if request.resolver_match.url_name == 'contacts' %}menu-link-active{% endif %}">CONTACT</a></li>
     <li><a href="#" class="menu-link"><img src="{% static 'img/search.svg' %}" alt="search"></a></li>
     <li>
         <div class = "menu-basket">
             <a class = "menu-basket-link" href = "{% url 'basket:view' %}">
                 <img src="{% static 'img/bag.svg' %}" alt="basket">
-                {% if user.is_authenticated %}
+                {% if user.is_authenticated and user_basket|length > 0 %}
+{#                    раздача кол-ва и цены через контекстные процессоры#}
                     <h4 class="menu-basket-counter">
-                        qty:&nbsp;{{ request.user|get_products_total_quantity_by_user }}&nbsp;pcs
+                        qty:&nbsp;{{ user_basket.0.get_products_total_quantity_by_user }}&nbsp;pcs
                         <br>
-                        price:&nbsp;{{ request.user|get_products_total_price_by_user }}$
-{#                        {% if basket %}#}
-{#                            qty:&nbsp;{{ products_total_quantity|floatformat:0 }}&nbsp;pcs#}
-{#                            <br>#}
-{#                            price:&nbsp;{{ products_total_price }}$#}
-{#                        {% endif %}#}
+                        price:&nbsp;{{ user_basket.0.get_products_total_price_by_user }}$
                     </h4>
+{#                    раздача кол-ва и цены через шаблонные фильтры#}
+{#                    <h4 class="menu-basket-counter">#}
+{#                        qty:&nbsp;{{ request.user|get_products_total_quantity_by_user }}&nbsp;pcs#}
+{#                        <br>#}
+{#                        price:&nbsp;{{ request.user|get_products_total_price_by_user }}$#}
+{#                    </h4>#}
                 {% endif %}
             </a>
         </div>
     </li>
     {% if user.is_authenticated %}
         <span class="menu-auth">
-            <a class="menu-auth-link" href = "{% url 'auth:edit' %}">{{ user.username|truncatechars_html:5 }}&nbsp;(edit)</a>
+            <a class="menu-auth-link" href = "{% url 'auth:edit' %}">
+                {% if user.first_name %}
+                    {{ user.first_name|truncatechars_html:10 }}&nbsp;(edit)
+                {% else %}
+                    {{ user.username|truncatechars_html:10 }}&nbsp;(edit)
+                {% endif %}
+            </a>
             <br>
             <a class="menu-auth-link" href = "{% url 'auth:logout' %}">logout</a>
         </span>
