--- a/adminapp/templates/adminapp/includes/inc_menu.html
+++ b/adminapp/templates/adminapp/includes/inc_menu.html
@@ -1,26 +1,15 @@
 <ul class="admin-menu-ul">
     <li class="admin-menu-list">
-        <a class="admin-menu-link" href="{% url 'main' %}">
+        <a class="admin-menu-link" href="{% url 'main:index' %}">
             на сайт
         </a>
     </li>
-    <li class="admin-menu-list">
-        <a class="admin-menu-link" href="{% url 'admin_custom:users' %}"
-            class="{% if request.resolver_match.url_name == 'users' %}
-                active
-                {% endif %}">
-            пользователи
-        </a>
+    <li class="admin-menu-list
+        admin-menu-list{% if request.resolver_match.url_name in 'users, user_create, user_update, user_delete' %}-active{% endif %}">
+        <a class="admin-menu-link" href="{% url 'admin_custom:users' %}">пользователи</a>
     </li>
-    <li class="admin-menu-list">
-        <a class="admin-menu-link" href="{% url 'admin_custom:categories' %}"
-            class="{% if request.resolver_match.url_name == 'categories' or category.name %}
-                active
-                {% endif %}">
-            категории
-            {% if category %}
-                :<span>{{ category.name }}</span>
-            {% endif %}
-        </a>
+    <li class="admin-menu-list
+        admin-menu-list{% if request.resolver_match.url_name in 'categories, category_create, category_update, category_delete' %}-active{% endif %}">
+        <a class="admin-menu-link" href="{% url 'admin_custom:categories' %}">категории</a>
     </li>
 </ul>
