--- a/adminapp/templates/adminapp/products.html
+++ b/adminapp/templates/adminapp/products.html
@@ -13,7 +13,7 @@
                 {% if not object.is_active %}
                     not_active
                 {% endif %}">
-                <div class="admin-object-img" style="background-image: url('/media/{{ object.image|default:'products_images/default.jpg' }}')"></div>
+                <div class="admin-object-img" style="background-image: url('/media/{{ object.image|default:'products_images/default.svg' }}')"></div>
                 <div class="admin-text-about">
                     <h4 class="admin-object-name">
                         {{ object.name|title }}
@@ -29,7 +29,9 @@
                 <div class="admin-object-actions">
                     <a class="admin-object-actions-link" href= {% url 'admin_custom:product_read' object.pk %}>подробнее</a>
                     <a class="admin-object-actions-link" href= {% url 'admin_custom:product_update' object.pk %}>редактировать</a>
-                    <a class="admin-object-actions-link" href= {% url 'admin_custom:product_delete' object.pk %}>удалить</a>
+                    {% if object.is_active == True %}
+                        <a class="admin-object-actions-link admin-object-actions-link-red" href= {% url 'admin_custom:product_delete' object.pk %}>удалить</a>
+                    {% endif %}
                 </div>
 
             </div>
