--- a/adminapp/templates/adminapp/users.html
+++ b/adminapp/templates/adminapp/users.html
@@ -10,7 +10,7 @@
 
         {% for object in object_list %}
             <div class="admin-object-record {% if not object.is_active %}not_active{% endif %}">
-                <img class="admin-object-img" src="/media/{{ object.avatar|default:'users_avatars/default.jpg' }}" alt="{{ object.username }}">
+                <img class="admin-object-img" src="/media/{{ object.avatar|default:'users_avatars/default.svg' }}" alt="{{ object.username }}">
                 <div class="admin-text-about">
                     <p><b>Username:</b>&nbsp;{{ object.username }}</p>
                     <p><b>Name:</b>&nbsp;
@@ -36,7 +36,9 @@
                 </div>
                 <div class="admin-object-actions">
                     <a class="admin-object-actions-link" href= {% url 'admin_custom:user_update' object.pk %}>редактировать</a>
-                    <a class="admin-object-actions-link" href= {% url 'admin_custom:user_delete' object.pk %}>удалить</a>
+                    {% if object.is_active == True %}
+                        <a class="admin-object-actions-link admin-object-actions-link-red" href= {% url 'admin_custom:user_delete' object.pk %}>удалить</a>
+                    {% endif %}
                 </div>
             </div>
         {% endfor %}
